publication description added

--- a/_posts/2020-07-11-HTJ.markdown
+++ b/_posts/2020-07-11-HTJ.markdown
@@ -9,4 +9,5 @@ subtitle: "Wiley "
 venue: "Journal of Heat Transfer"
 arxiv: https://doi.org/10.1002/htj.21986
 ---
-In the current numerical study, the thermal and flow field performance of an array of confined multiple jets with air, water, and water‐Al2O3 nanofluid in the maximum crossflow configuration over the target plate with and without pin fins is investigated. The numerical results are validated with the experimental data; it is found that a reasonable prediction related to heat transfer can be made. For this study, steady‐state Reynolds‐averaged Navier‐Stokes simulations with the shear‐stress transport k‐ω turbulence model in ANSYS Fluent were performed. The simulations are performed with volumetric concentration ϕ = 0.2% to 3% and the jet's Reynolds number Re = 15 000 to 35 000. In all cases, the jet outlet‐to‐target plate distance Z D/ is 3. It is found that the increase in values of the volumetric concentration of nanoparticles results in a decrease of the Nusselt number and an increase of the convective heat transfer coefficient. This is because there is an increase in thermal conductivity of the working fluid with the increase in the volumetric concentration of nanoparticles for the same Reynolds number. About 81.5% and 89.1%
+
+In this study the influence of nanofluid for heat enhancement is numerically investigated at **micro scale**.
