--- a/_posts/2022-07-20-cfd-algo.markdown
+++ b/_posts/2022-07-20-cfd-algo.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "CFD"
+title:  "Computational Fluid Dynamics"
 date:   2022-07-30 22:20:59 +00:00
 image: /images/cfd-algo.png
 categories: TUM
