--- a/_posts/2020-10-24-JEHT.markdown
+++ b/_posts/2020-10-24-JEHT.markdown
@@ -5,7 +5,7 @@ date:   2020-10-24 21:21:53 +00:00
 image: /images/2020-JEHT.png
 categories: research
 authors: "Usman Allauddin, Tariq Jamil, Muhammad Shakaib, H.M. Usman Khan, <strong>Rafay Mohiuddin</strong> ,M. Saad Saeed, Haseeb Ahsan & Naseem Uddin"
-subtitle: "Begell HouseWiley "
+subtitle: "Begell House"
 venue: "Journal of Enhnaved Heat Transfer"
 paper: https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html
 ---
