--- a/_posts/2022-08-15-cps-car.markdown
+++ b/_posts/2022-08-15-cps-car.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "F1Tenth Autonomous Car"
 date:   2022-08-15 22:20:59 +00:00
-image: /images/cps-sim.png
+image: /images/cps-car.png
 categories: TUM
 author: "Rafay"
 subtitle: "cps"
@@ -11,4 +11,4 @@ code:
 course: "CPS: Cyber Physical Systems Lab"
 ---
 
-Implimentation of follow the gap, follow the wall, automatic emergrency brake in F1Tenth car.
+Implimentation of follow the gap, follow the wall on F1Tenth car.
