--- a/_posts/2022-08-15-cps-sim.markdown
+++ b/_posts/2022-08-15-cps-sim.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "F1Tenth Autonomus Car - Simulation"
+title:  "F1Tenth Autonomous Car - Simulation"
 date:   2022-08-15 22:20:59 +00:00
 image: /images/cps-sim.png
 categories: TUM
