--- a/_posts/2023-10-04-rdc-2Ropt.markdown
+++ b/_posts/2023-10-04-rdc-2Ropt.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "2R-planar robot: Bi-level Optimisation"
 date:   2023-4-10 22:20:59 +00:00
-image: /images/rdc-2Ropt.png
+image: /images/rdc-2Ropt.gif
 categories: TUM
 author: "Rafay"
 subtitle: "rdc"
