--- a/_posts/2022-12-01-sl.markdown
+++ b/_posts/2022-12-01-sl.markdown
@@ -2,11 +2,11 @@
 layout: post
 title:  "Real Time Optical Process Monitering & Controll for Additive Manufacturing"
 date:   2023-01-10 22:20:59 +00:00
-image: /images/sl-img.png
+image: /images/sl-paper.png
 categories: TUM
 author: "Rafay"
 subtitle: "sl"
-poster: /pdfs/sl_poster.pdf
+poster: 
 paper:
 code:
 course: "SL: Software Lab"
