--- a/_posts/2020-10-24-JEHT.markdown
+++ b/_posts/2020-10-24-JEHT.markdown
@@ -8,5 +8,6 @@ authors: "Usman Allauddin, Tariq Jamil, Muhammad Shakaib, H.M. Usman Khan, <stro
 subtitle: "Begell House"
 venue: "Journal of Enhnaced Heat Transfer"
 paper: https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html
+web: https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html
 ---
 
