--- a/_posts/2024-06-26-ai4s.markdown
+++ b/_posts/2024-06-26-ai4s.markdown
@@ -8,6 +8,7 @@ author: "Rafay"
 subtitle: "AI4Science"
 poster: 
 paper:
+code: https://github.com/rafaymhddn/End-to-End-AI-for-Science
 course: "AI for Science Bootcamp"
 ---
 
