--- a/_posts/2024-06-15-ddpm.markdown
+++ b/_posts/2024-06-15-ddpm.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "Diffsion Model (DDPM)"
 date:   2024-06-15 22:20:59 +00:00
 image: /images/ddpm_mnist.gif
-categories: 
+categories: "side project"
 author: "Rafay"
 subtitle: 
 poster: 
