--- a/_posts/2024-06-15-ddpm.markdown
+++ b/_posts/2024-06-15-ddpm.markdown
@@ -5,7 +5,7 @@ date:   2024-06-15 22:20:59 +00:00
 image: /images/ddpm_mnist.gif
 categories: "side project"
 author: "Rafay"
-subtitle: 
+subtitle: " "
 poster: 
 paper:
 code:
