project ddpm added

--- a/_posts/2022-02-24-cv.markdown
+++ b/_posts/2022-02-24-cv.markdown
@@ -9,6 +9,6 @@ subtitle: " "
 poster: 
 paper:
 code:
-course: 
+course: " "
 ---
 Implementation of Faster RCNN in pytorch + other CNN based projects object detection, facial keypoint, semantic segmentation ...
