--- a/_posts/2022-02-24-cv.markdown
+++ b/_posts/2022-02-24-cv.markdown
@@ -3,12 +3,12 @@ layout: post
 title:  "Faster R-CNN Implementation"
 date:   2022-02-24 22:20:59 +00:00
 image: /images/rcnn.png
-categories: "side project"
+categories: SideProject
 author: "Rafay"
-subtitle: " "
+subtitle: 
 poster: 
 paper:
 code:
-course: " "
+course: 
 ---
 Implementation of Faster RCNN in pytorch + other CNN based projects object detection, facial keypoint, semantic segmentation ...
