--- a/_posts/2024-06-15-ddpm.markdown
+++ b/_posts/2024-06-15-ddpm.markdown
@@ -1,14 +1,14 @@
 ---
 layout: post
-title:  "Diffsion Model (DDPM)"
+title:  "Diffusion Model (DDPM)"
 date:   2024-06-15 22:20:59 +00:00
 image: /images/ddpm_mnist.gif
 categories: SideProject
 author: "Rafay"
-subtitle: 
+subtitle:
 poster: 
 paper:
 code:
-course: 
+course:
 ---
 Implementation of DDPM paper in pytorch, training on MNIST and CIFAR10
