--- a/_posts/2024-08-15-gpt2.markdown
+++ b/_posts/2024-08-15-gpt2.markdown
@@ -1,14 +1,14 @@
 ---
 layout: post
-title:  "Diffsion Model (DDPM)"
+title:  "GPT2 Implimentation"
 date:   2024-06-15 22:20:59 +00:00
-image: /images/ddpm_mnist.gif
+image: 
 categories: "side project"
 author: "Rafay"
-subtitle: " "
+subtitle: 
 poster: 
 paper:
 code:
 course: 
 ---
-Implementation of DDPM paper in pytorch, training on MNIST and CIFAR10
+Implimentation of LLaMA2 & GPT2 (distrubuted training in 8gpu) in pytorch
