--- a/_posts/2024-07-08-opensu3s.markdown
+++ b/_posts/2024-07-08-opensu3s.markdown
@@ -2,10 +2,10 @@
 layout: post
 title:  "OpenSU3D: Open Word 3D Scene Understanding using Foundation Models"
 date:   2024-07-8 22:20:59 +00:00
-image: /images/opensu3d.png
+image: /images/gif_opensu3d.gif
 categories: research
 authors: "<strong>Rafay Mohiuddin</strong>,Sai Manoj Prakhya, Fiona Collins, Ziyuan Liu, Andre Borrmann"
-subtitle: "IEEE ICRA25 & IROS24w"
+subtitle: "IEEE Internatioanl Conference on Robotics and Automation (ICRA'25)"
 venue: 
 paper: https://arxiv.org/pdf/2407.14279
 web: https://opensu3d.github.io/
