--- a/_posts/2023-04-01-ISARC.markdown
+++ b/_posts/2023-04-01-ISARC.markdown
@@ -2,11 +2,11 @@
 layout: post
 title:  "Optical Process Control for extrusion-based Additive Manufacturing methods in construction"
 date:   2023-04-1 22:20:59 +00:00
-image: /images/print_gif.gif
+image: /images/gif_print.gif
 categories: research
 authors: "<strong>Rafay Mohiuddin</strong>, Miranda Cruz Policroniades, Martin Slepicka, André Borrmann"
 subtitle: "ISARC"
-venue: "40th International Symposium on Automation and Robotics in Construction"
+venue: "International Symposium on Automation and Robotics in Construction (ISARC)"
 paper: https://www.iaarc.org/publications/fulltext/013_ISARC%202023_Paper_145.pdf
 web: https://www.iaarc.org/publications/2023_proceedings_of_the_40th_isarc_chennai_india/optical_process_control_for_extrusion_based_additive_manufacturing_methods_in_construction.html
 website: https://www.iaarc.org/publications/2023_proceedings_of_the_40th_isarc_chennai_india/optical_process_control_for_extrusion_based_additive_manufacturing_methods_in_construction.html
