--- a/_posts/2025-01-30-opensu3d.markdown
+++ b/_posts/2025-01-30-opensu3d.markdown
@@ -5,8 +5,8 @@ date:   2025-01-30 22:20:59 +00:00
 image: /images/gif_opensu3d.gif
 categories: research
 authors: "<strong>Rafay Mohiuddin</strong>,Sai Manoj Prakhya, Fiona Collins, Ziyuan Liu, Andre Borrmann"
-subtitle: "IEEE Internatioanl Conference on Robotics and Automation (ICRA)"
-venue: 
+subtitle: "IEEE"
+venue: "Internatioanl Conference on Robotics and Automation (ICRA)"
 paper: https://arxiv.org/pdf/2407.14279
 web: https://opensu3d.github.io/
 #code: https://github.com/opensu3d/opensu3d.github.io
