logo updated and images aranged

--- a/_posts/2022-12-01-sl.markdown
+++ b/_posts/2022-12-01-sl.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Real Time Optical Process Monitering & Controll for Additive Manufacturing"
 date:   2023-01-10 22:20:59 +00:00
-image: /images/sl-img.png
+image: /images/projects/sl-img.png
 categories: TUM
 author: "Rafay"
 subtitle: "sl"
