--- a/_oldposts/2022-07-20-psd.markdown
+++ b/_oldposts/2022-07-20-psd.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Simple Shop"
 date:   2022-06-01 22:20:59 +00:00
-image: /images/psd.png
+image: /images/projects/psd.png
 categories: TUM
 author: "Rafay"
 subtitle: "psd"
