--- a/_posts/2022-02-24-cv.markdown
+++ b/_posts/2022-02-24-cv.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Faster R-CNN Implementation"
 date:   2022-02-24 22:20:59 +00:00
-image: /images/rcnn.png
+image: /images/projects/rcnn.png
 categories: SideProject
 author: "Rafay"
 subtitle: 
