--- a/_posts/2022-07-20-cfd-algo.markdown
+++ b/_posts/2022-07-20-cfd-algo.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Computational Fluid Dynamics"
 date:   2022-07-30 22:20:59 +00:00
-image: /images/cfd-algo.png
+image: /images/projects/cfd-algo.png
 categories: TUM
 author: "Rafay"
 subtitle: "cfd"
