--- a/_posts/2022-08-15-cps-car.markdown
+++ b/_posts/2022-08-15-cps-car.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "F1Tenth Autonomous Car"
 date:   2022-09-14 22:20:59 +00:00
-image: /images/cps-car_f10.gif
+image: /images/projects/cps-car_f10.gif
 categories: TUM
 author: "Rafay"
 subtitle: "cps"
