--- a/_posts/2023-10-04-rdc-apo.markdown
+++ b/_posts/2023-10-04-rdc-apo.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Attachment Point Optimization"
 date:   2023-4-10 22:20:59 +00:00
-image: /images/rdc-apo.png
+image: /images/projects/rdc-apo.png
 categories: TUM
 author: "Rafay"
 subtitle: "rdc"
