--- a/_posts/2023-10-08-adl4p-ks.markdown
+++ b/_posts/2023-10-08-adl4p-ks.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Kuramoto-Sivashinsky Learning"
 date:   2023-08-01 22:20:50 +00:00
-image: /images/adl4p_ks.png
+image: /images/projects/adl4p_ks.png
 categories: TUM
 author: "Rafay"
 subtitle: "adl4p"
