--- a/_posts/2023-10-08-adl4p-path.markdown
+++ b/_posts/2023-10-08-adl4p-path.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Optimal Path - Differentiable Physics"
 date:   2023-08-01 22:20:59 +00:00
-image: /images/adl4p.png
+image: /images/projects/adl4p.png
 categories: TUM
 author: "Rafay"
 subtitle: "adl4p"
