--- a/_posts/2023-10-08-adl4p.markdown
+++ b/_posts/2023-10-08-adl4p.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Advanced Deep Learning for Physics"
 date:   2023-08-01 22:20:59 +00:00
-image: /images/adl4p_flow2.gif
+image: /images/projects/adl4p_flow2.gif
 categories: TUM
 author: "Rafay"
 subtitle: "adl4p"
