--- a/_posts/2024-06-15-ddpm.markdown
+++ b/_posts/2024-06-15-ddpm.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Diffusion Model (DDPM)"
 date:   2024-06-15 22:20:59 +00:00
-image: /images/ddpm_mnist.gif
+image: /images/projects/ddpm_mnist.gif
 categories: SideProject
 author: "Rafay"
 subtitle:
