--- a/_posts/2024-06-26-ai4s.markdown
+++ b/_posts/2024-06-26-ai4s.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "AI for Science FourCastNet"
 date:   2024-06-26 22:20:59 +00:00
-image: /images/fcnet.png
+image: /images/projects/fcnet.png
 categories: EuroCC2
 author: "Rafay"
 subtitle: "AI4Science"
