--- a/_posts/2025-06-01-remesh.markdown
+++ b/_posts/2025-06-01-remesh.markdown
@@ -2,8 +2,8 @@
 layout: post
 title:  "3D Content Generation Platform"
 date:   2025-05-01 22:20:59 +00:00
-image: /images/remesh.gif
-categories: Antler
+image: /images/projects/remesh.gif
+categories: Startup
 author: "Rafay"
 subtitle: "startup"
 poster: 
